# MAPS

./: .env.sample  README.md  WEB_DEMO_README.md  __init__.py  configuration.py  notebook_xfbbw.ipynb  orchestrator.py  pyproject.toml  replicate_usage_examples.py  requirements.txt  run_demo.sh  simple_demo_standalone.py  simple_web_demo.py  static_demo.html  test_system.py  vercel.json  web_demo.py
agents/: __init__.py  base_agent.py  description_agent.py  ecommerce_agent.py  image_agent.py
api/: generate.py  index.py
config/: __init__.py  configuration.py
examples/: __init__.py  usage_examples.py
models/: __init__.py  data_models.py
multi_agent_product_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utils/: __init__.py  logging_system.py
